syntax = "proto3";

option csharp_namespace = "GrpcGreeter.Protos";
import "Protos/empty.proto";
import "Protos/enums.proto";

package protos.skillCRUD;

service SkillCRUD{
  rpc GetSkills (empty.Empty) returns (Skills);
  rpc GetByID (SkillFilter) returns (Skill);
  rpc Insert (Skill) returns (empty.Empty);
  rpc Update (Skill) returns (empty.Empty);
  rpc Delete (SkillFilter) returns (empty.Empty);
}

message Skill{
  string id = 1;
  string name = 2;
  enums.Proficiency proficiency = 3;
}

message Skills{
  repeated Skill items = 1;
}

message SkillFilter{
  string id = 1;
  string name = 2;
  enums.Proficiency proficiency = 3;
}